fix: Change typo Short Url

--- a/app/template/index.html
+++ b/app/template/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Shortener</title>
+    <title>Short URL</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="container">
-        <h1>URL Shortener</h1>
+        <h1>Short URL</h1>
         <form id="shorten-form" action="/api/shorten" method="POST">
             <input type="text" id="original_url" name="original_url" placeholder="Enter your URL here" required>
             <button type="submit">Shorten</button>
